@@ -1,0 +1,73 @@
+##########################################################################
+#  
+#  Copyright (c) 2012, Image Engine Design Inc. All rights reserved.
+#  
+#  Redistribution and use in source and binary forms, with or without
+#  modification, are permitted provided that the following conditions are
+#  met:
+#  
+#      * Redistributions of source code must retain the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer.
+#  
+#      * Redistributions in binary form must reproduce the above
+#        copyright notice, this list of conditions and the following
+#        disclaimer in the documentation and/or other materials provided with
+#        the distribution.
+#  
+#      * Neither the name of John Haddon nor the names of
+#        any other contributors to this software may be used to endorse or
+#        promote products derived from this software without specific prior
+#        written permission.
+#  
+#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
+#  IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
+#  THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+#  PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR
+#  CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
+#  EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
+#  PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
+#  LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#  NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+#  SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#  
+##########################################################################
+
+import IECore
+
+class parameterChangedCallback( IECore.Parameterised ) :
+
+	def __init__( self ) :
+	
+		IECore.Parameterised.__init__( self, "" )
+		
+		self.parameters().addParameters(
+			
+			[
+				IECore.IntParameter(
+					"driver",
+					"",
+					0
+				),
+				
+				IECore.IntParameter(
+					"driven",
+					"",
+					0
+				),
+				
+			],
+		
+		)
+		
+		self.changes = []
+		
+	def parameterChanged( self, parameter ) :
+	
+		self.changes.append( ( parameter, str( parameter.getValue() ) ) )
+				
+		if parameter.isSame( self.parameters()["driver"] ) :
+			self.parameters()["driven"].setNumericValue( self.parameters()["driver"].getNumericValue() * 5 )
+	
+IECore.registerRunTimeTyped( parameterChangedCallback )
